--- a/web/src/app/globals.css
+++ b/web/src/app/globals.css
@@ -42,7 +42,10 @@ body {
 .card.hoverable {
   @apply transition-colors hover:border-primary-600 hover:bg-primary-900/30 hover:shadow-lg hover:border-2;
 }
-
 .area.hoverable {
   @apply transition-colors hover:bg-primary-100/5;
+}
+
+.subtext {
+  @apply text-xs text-primary-500;
 }
