--- a/web/src/app/globals.css
+++ b/web/src/app/globals.css
@@ -33,6 +33,9 @@ body {
 }
 
 /* Custom styles */
+.page {
+  @apply bg-primary-900 flex min-h-screen overscroll-none py-16 items-center
+}
 .card {
   @apply bg-primary-800/10 rounded-lg overflow-hidden border border-primary-800 
 }
