--- a/web/src/app/globals.css
+++ b/web/src/app/globals.css
@@ -48,7 +48,9 @@ body {
 .area.hoverable {
   @apply transition-colors hover:bg-primary-100/5 cursor-pointer;
 }
-
+.text.hoverable {
+  @apply transition-colors hover:text-secondary-main-100 ;
+}
 .subtext {
   @apply text-xs text-primary-500;
 }
