electric blue theme

--- a/web/src/app/globals.css
+++ b/web/src/app/globals.css
@@ -49,7 +49,7 @@ body {
   @apply transition-colors hover:bg-primary-100/5 cursor-pointer;
 }
 .text.hoverable {
-  @apply transition-colors hover:text-secondary-main-100 ;
+  @apply transition-colors hover:text-secondary-signature-100 ;
 }
 .subtext {
   @apply text-xs text-primary-500;
