--- a/web/src/app/globals.css
+++ b/web/src/app/globals.css
@@ -34,7 +34,7 @@ body {
 
 /* Custom styles */
 .page {
-  @apply bg-primary-900 min-h-screen overscroll-none py-16
+  @apply bg-primary-900 min-h-screen overscroll-none pt-16
 }
 .card {
   @apply bg-primary-800/10 rounded-lg overflow-hidden border-2 border-primary-800 
@@ -56,4 +56,7 @@ body {
 }
 .focus-glow {
   @apply focus:outline-none focus:ring-4 focus:ring-primary-100 focus:ring-opacity-10;
+}
+.accent-hover {
+  @apply transition-colors hover:bg-secondary-signature-100/20 hover:text-secondary-signature-100 cursor-pointer;
 }
