--- a/web/src/app/globals.css
+++ b/web/src/app/globals.css
@@ -34,7 +34,7 @@ body {
 
 /* Custom styles */
 .page {
-  @apply bg-primary-900 min-h-screen overscroll-none pt-16
+  @apply bg-primary-900 min-h-screen overscroll-none
 }
 .card {
   @apply bg-primary-800/10 rounded-lg overflow-hidden border-2 border-primary-800 
@@ -43,13 +43,13 @@ body {
   @apply p-3;
 }
 .card.hoverable {
-  @apply transition-colors hover:border-primary-600 hover:bg-primary-900/30 hover:shadow-lg hover:border-2;
+  @apply hover:border-primary-600 hover:bg-primary-900/30 hover:shadow-lg hover:border-2;
 }
 .area.hoverable {
-  @apply transition-colors hover:bg-primary-100/5 cursor-pointer;
+  @apply hover:bg-primary-100/5 cursor-pointer;
 }
 .text.hoverable {
-  @apply transition-colors hover:text-secondary-signature-100 ;
+  @apply hover:text-secondary-signature-100 ;
 }
 .subtext {
   @apply text-xs text-primary-500;
@@ -58,5 +58,5 @@ body {
   @apply focus:outline-none focus:ring-4 focus:ring-primary-100 focus:ring-opacity-10;
 }
 .accent-hover {
-  @apply transition-colors hover:bg-secondary-signature-100/20 hover:text-secondary-signature-100 cursor-pointer;
+  @apply hover:bg-secondary-signature-100/20 hover:text-secondary-signature-100 cursor-pointer;
 }
