--- a/web/src/app/globals.css
+++ b/web/src/app/globals.css
@@ -16,6 +16,18 @@
   }
 }
 
+/* remove number increment arrow */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  /* display: none; <- Crashes Chrome on hover */
+  -webkit-appearance: none;
+  margin: 0; /* <-- Apparently some margin are still there even though it's hidden */
+}
+
+input[type="number"] {
+  -moz-appearance: textfield; /* Firefox */
+}
+
 body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
