starting date filter

--- a/web/src/app/chart/react_dates_overrides.css
+++ b/web/src/app/chart/react_dates_overrides.css
@@ -29,6 +29,9 @@
 .DayPicker_transitionContainer {
   @apply bg-primary-800 rounded-xl border border-primary-700;
 }
+.DayPicker_weekHeader {
+  @apply text-primary-600;
+}
 
 /* Top arrows for left and right on the months */
 .DayPickerNavigation_button {
