Single date picker

--- a/web/src/app/chart/react_dates_overrides.css
+++ b/web/src/app/chart/react_dates_overrides.css
@@ -1,5 +1,13 @@
 /* // NOTE: the order of these styles DO matter */
 
+/* Single date picker */
+.SingleDatePicker_picker {
+  @apply bg-transparent;
+}
+.SingleDatePickerInput {
+  @apply bg-transparent;
+}
+/* Date range picker */
 .DateRangePickerInput {
   @apply bg-transparent;
 }
