Add new theme options and update CSS files

--- a/web/src/app/css/hexThemes.css
+++ b/web/src/app/css/hexThemes.css
@@ -31,10 +31,10 @@
     --chart-7: #8c67f6;
   }
 
-  .mystical-fire {
+  .mysticalFire {
   }
 
-  .infinite-void {
+  .infiniteVoid {
   }
 
   .deepLava {
