--- a/web/src/app/css/themes.css
+++ b/web/src/app/css/themes.css
@@ -31,10 +31,10 @@
     --chart-7: 140 103 246;
   }
 
-  .mystical-fire {
+  .mysticalFire {
   }
 
-  .infinite-void {
+  .infiniteVoid {
   }
 
   .deepLava {
