--- a/web/src/app/css/themes.css
+++ b/web/src/app/css/themes.css
@@ -101,7 +101,7 @@
     --primary-1000: 22 8 10;
     /* Key accent colors */
     --accent-100: 224 43 107;
-    --accent-200: 185 12 72;
+    --accent-200: 184 0 77;
     --flair-100: 255 170 0;
     --negative-100: 220 80 104;
     /* Additional chart colors */
@@ -116,19 +116,20 @@
 
   .electricOcean {
     /* Base colors */
-    --primary-100: 219 223 247;
-    --primary-200: 183 191 255;
-    --primary-300: 141 155 254;
-    --primary-400: 104 121 252;
-    --primary-500: 69 91 255;
-    --primary-600: 42 67 255;
-    --primary-700: 20 33 221;
-    --primary-800: 13 2 163;
-    --primary-900: 7 1 101;
-    --primary-1000: 0 0 40;
+    --primary-100: 241 241 247; /* Slightly bluish tint */
+    --primary-200: 209 209 224; /* More noticeable blue tint */
+    --primary-300: 183 183 204; /* Subtle blue undertone */
+    --primary-400: 156 156 185; /* Gentle blue hue */
+    --primary-500: 125 125 163; /* Bluish-gray appearance */
+    --primary-600: 98 98 135; /* Grayscale with blue tint */
+    --primary-700: 64 62 107; /* Darker bluish-gray */
+    --primary-800: 52 51 89; /* Deeper blue-gray */
+    --primary-900: 35 34 64; /* Nearly gray with a hint of blue */
+    --primary-1000: 13 13 26; /* Dark gray-blue */
+
     /* Key accent colors */
-    --accent-100: 19 200 232;
-    --accent-200: 0 148 174;
+    --accent-100: 69 179 199;
+    --accent-200: 58 103 250;
     --flair-100: 0 68 255;
     --negative-100: 220 80 104;
     /* Additional chart colors */
